# tauri-plugin-icloud-kvs

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPERS.md  LICENSE-MIT  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: demo-app-spec.md  design-spec.md  m1-5-publish-spec.md  milestones.md  team-times-handoff.md
docs/announcements/: awesome-tauri-pr.md  discord-0.1.0.md
docs/plans/: demo-app.md  m1-1-scaffold.md  m1-2-macos-implementation.md  m1-3-ios-implementation.md  m1-4-change-events.md  m1-5-polish-publish.md
examples/demo-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json
examples/demo-app/src/: main.ts  styles.css
examples/demo-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
examples/demo-app/src-tauri/capabilities/: default.json
examples/demo-app/src-tauri/icons/: icon.icns
examples/demo-app/src-tauri/src/: lib.rs  main.rs
guest-js/: package-lock.json  package.json  tsconfig.json
guest-js/src/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: account_status.toml  get_all.toml  synchronize.toml
permissions/schemas/: schema.json
src/: commands.rs  conversion.rs  error.rs  events.rs  lib.rs  models.rs  store.rs  validation.rs
tests/: kvs_roundtrip.rs
